--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "dotenv": "^16.0.3",
+    "emailjs-com": "^3.2.0",
     "jwt-decode": "^3.1.2",
     "mongoose": "^6.9.1",
     "react": "^18.2.0",
